<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="26dp"
        android:text="@string/info_portfo_title"
        android:textSize="16dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:stretchColumns="1">

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="24dp">

                <TextView
                    android:layout_width="128dp"
                    android:paddingLeft="4dp"
                    android:text="@string/info_portfo_row1"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/shares_owned"
                    android:text="0"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="24dp">

                <TextView
                    android:layout_width="128dp"
                    android:paddingLeft="4dp"
                    android:text="@string/info_portfo_row2"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/avg_cost"
                    android:text="$0.00"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="24dp">

                <TextView
                    android:layout_width="128dp"
                    android:paddingLeft="4dp"
                    android:text="@string/info_portfo_row3"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/total_cost"
                    android:text="$0.00"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="24dp">

                <TextView
                    android:layout_width="128dp"
                    android:paddingLeft="4dp"
                    android:text="@string/info_portfo_row4"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/change"
                    android:text="$0.00"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="24dp">

                <TextView
                    android:layout_width="128dp"
                    android:paddingLeft="4dp"
                    android:text="@string/info_portfo_row5"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/market_value"
                    android:text="$0.00"
                    android:textSize="12dp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/trade_btn"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corner_shape"
            android:text="TRADE"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>