<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="26dp"
        android:text="@string/info_insight_title"
        android:textSize="16dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/info_insight_table_title"
        android:textSize="16dp"
        android:gravity="center"></TextView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:stretchColumns="1,2">
        <TableRow android:minHeight="26dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="173dp"
                android:textColor="@color/darkgray"
                android:textStyle="bold"
                android:padding="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/gray"
                android:text="company name"
                android:ellipsize="end"
                android:maxLines="1"
                android:id="@+id/social_company"/>
            <TextView
                android:text="@string/social_row1_col2"
                android:padding="2dp"
                android:layout_marginRight="2dp"
                android:textColor="@color/darkgray"
                android:background="@color/gray"/>
            <TextView
                android:text="@string/social_row1_col3"
                android:padding="2dp"
                android:textColor="@color/darkgray"
                android:background="@color/gray"/>
        </TableRow>
        <TableRow android:minHeight="26dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/social_row2"
                android:textStyle="bold"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/gray"/>
            <TextView
                android:id="@+id/reddit_total"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:layout_marginRight="2dp"
                android:padding="2dp"
                android:background="@color/lightgray"/>
            <TextView
                android:id="@+id/twitter_total"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:background="@color/lightgray"/>
        </TableRow>
        <TableRow android:minHeight="26dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/social_row3"
                android:textStyle="bold"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/gray"/>
            <TextView
                android:id="@+id/reddit_pos"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:layout_marginRight="2dp"
                android:padding="2dp"
                android:background="@color/lightgray"/>
            <TextView
                android:id="@+id/twitter_pos"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:background="@color/lightgray"/>
        </TableRow>
        <TableRow android:minHeight="26dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/social_row4"
                android:textStyle="bold"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/gray"/>
            <TextView
                android:id="@+id/reddit_neg"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:layout_marginRight="2dp"
                android:padding="2dp"
                android:background="@color/lightgray"/>
            <TextView
                android:id="@+id/twitter_neg"
                android:text="0000"
                android:textColor="@color/darkgray"
                android:padding="2dp"
                android:background="@color/lightgray"/>
        </TableRow>
    </TableLayout>
</LinearLayout>